--- a/src/index.css
+++ b/src/index.css
@@ -1,151 +1,326 @@
-/*
-=============== 
-Variables
-===============
-*/
-@import url("https://fonts.googleapis.com/css2?family=Hubballi&display=swap");
-
-:root {
-	/* dark shades of primary color*/
-	--clr-primary-1: hsl(205, 86%, 17%);
-	--clr-primary-2: hsl(205, 77%, 27%);
-	--clr-primary-3: hsl(205, 72%, 37%);
-	--clr-primary-4: hsl(205, 63%, 48%);
-	/* primary/main color */
-	--clr-primary-5: hsl(205, 78%, 60%);
-	/* lighter shades of primary color */
-	--clr-primary-6: hsl(205, 89%, 70%);
-	--clr-primary-7: hsl(205, 90%, 76%);
-	--clr-primary-8: hsl(205, 86%, 81%);
-	--clr-primary-9: hsl(205, 90%, 88%);
-	--clr-primary-10: hsl(205, 100%, 96%);
-	/* darkest grey - used for headings */
-	--clr-grey-1: hsl(209, 61%, 16%);
-	--clr-grey-2: hsl(211, 39%, 23%);
-	--clr-grey-3: hsl(209, 34%, 30%);
-	--clr-grey-4: hsl(209, 28%, 39%);
-	/* grey used for paragraphs */
-	--clr-grey-5: hsl(210, 22%, 49%);
-	--clr-grey-6: hsl(209, 23%, 60%);
-	--clr-grey-7: hsl(211, 27%, 70%);
-	--clr-grey-8: hsl(210, 31%, 80%);
-	--clr-grey-9: hsl(212, 33%, 89%);
-	--clr-grey-10: hsl(210, 36%, 96%);
-	--clr-white: #fff;
-	--clr-red-dark: hsl(360, 67%, 44%);
-	--clr-red-light: hsl(360, 71%, 66%);
-	--clr-green-dark: hsl(125, 67%, 44%);
-	--clr-green-light: hsl(125, 71%, 66%);
-	--clr-black: #222;
-	--transition: all 0.3s linear;
-	--spacing: 0.1rem;
-	--radius: 0.25rem;
-	--light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-	--dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-	--max-width: 1300px;
-	--fixed-width: 620px;
-}
-/*
-=============== 
-Global Styles
-===============
-*/
-
 *,
 ::after,
 ::before {
-	margin: 0;
-	padding: 0;
 	box-sizing: border-box;
 }
+
+/* fonts */
+@import url("https://fonts.googleapis.com/css2?family=Cabin&family=Roboto+Condensed:wght@400;700&display=swap");
+
+html {
+	font-size: 100%;
+} /*16px*/
+
+:root {
+	/* colors */
+	--primary-50: #eff6ff;
+	--primary-100: #dbeafe;
+	--primary-200: #bfdbfe;
+	--primary-300: #93c5fd;
+	--primary-400: #60a5fa;
+	--primary-500: #3b82f6;
+	--primary-600: #2563eb;
+	--primary-700: #1d4ed8;
+	--primary-800: #1e40af;
+	--primary-900: #1e3a8a;
+
+	/* grey */
+	--grey-50: #f0f4f8;
+	--grey-100: #d9e2ec;
+	--grey-200: #bcccdc;
+	--grey-300: #9fb3c8;
+	--grey-400: #829ab1;
+	--grey-500: #627d98;
+	--grey-600: #486581;
+	--grey-700: #334e68;
+	--grey-800: #243b53;
+	--grey-900: #102a43;
+	/* rest of the colors */
+	--black: #222;
+	--white: #fff;
+	--red-light: #f8d7da;
+	--red-dark: #842029;
+	--green-light: #d1e7dd;
+	--green-dark: #0f5132;
+
+	/* fonts  */
+	--headingFont: "Roboto Condensed", Sans-Serif;
+	--bodyFont: "Cabin", Sans-Serif;
+	--small-text: 0.875rem;
+	--extra-small-text: 0.7em;
+	/* rest of the vars */
+	--backgroundColor: var(--grey-50);
+	--textColor: var(--grey-900);
+	--borderRadius: 0.25rem;
+	--letterSpacing: 1px;
+	--transition: 0.3s ease-in-out all;
+	--max-width: 1120px;
+	--fixed-width: 500px;
+	--fluid-width: 90vw;
+	--breakpoint-lg: 992px;
+	--nav-height: 6rem;
+	/* box shadow*/
+	--shadow-1: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+	--shadow-2: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+		0 2px 4px -1px rgba(0, 0, 0, 0.06);
+	--shadow-3: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+		0 4px 6px -2px rgba(0, 0, 0, 0.05);
+	--shadow-4: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
+		0 10px 10px -5px rgba(0, 0, 0, 0.04);
+}
+
 body {
-	font-family: "eurostile", BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-	background: var(--clr-grey-10);
-	color: var(--clr-grey-1);
-	line-height: 1.5;
-	font-size: 0.875rem;
+	background: var(--backgroundColor);
+	font-family: var(--bodyFont);
+	font-weight: 400;
+	line-height: 1.75;
+	color: var(--textColor);
 }
-ul {
-	list-style-type: none;
+
+p {
+	margin-bottom: 1.5rem;
+	max-width: 40em;
 }
-a {
-	text-decoration: none;
-}
+
 h1,
 h2,
 h3,
-h4 {
-	letter-spacing: var(--spacing);
+h4,
+h5 {
+	margin: 0;
+	margin-bottom: 1.38rem;
+	font-family: var(--headingFont);
+	font-weight: 400;
+	line-height: 1.3;
 	text-transform: capitalize;
-	line-height: 1.25;
-	margin-bottom: 0.75rem;
+	letter-spacing: var(--letterSpacing);
 }
+
 h1 {
-	font-size: 3rem;
+	margin-top: 0;
+	font-size: 3.052rem;
 }
+
 h2 {
-	font-size: 2rem;
+	font-size: 2.441rem;
 }
+
 h3 {
+	font-size: 1.953rem;
+}
+
+h4 {
+	font-size: 1.563rem;
+}
+
+h5 {
 	font-size: 1.25rem;
 }
-h4 {
-	font-size: 0.875rem;
-}
-p {
-	margin-bottom: 1.25rem;
-	color: wheat;
-}
-@media screen and (min-width: 800px) {
-	h1 {
-		font-size: 4rem;
-	}
-	h2 {
-		font-size: 2.5rem;
-	}
-	h3 {
-		font-size: 1.75rem;
-	}
-	h4 {
-		font-size: 1rem;
-	}
-	body {
-		font-size: 1rem;
-	}
-	h1,
-	h2,
-	h3,
-	h4 {
-		line-height: 1;
-	}
-}
-/*  global classes */
 
-/* section */
-.section {
-	width: 95vw;
-	margin: 0rem auto;
-	box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-	padding: 2rem;
-	border-radius: 10px;
-	margin-block-start: 6rem;
+small,
+.text-small {
+	font-size: var(--small-text);
 }
 
-@media screen and (min-width: 992px) {
-	.section {
-		width: 95vw;
-	}
+a {
+	text-decoration: none;
+	letter-spacing: var(--letterSpacing);
 }
+a,
+button {
+	line-height: 1.15;
+}
+button:disabled {
+	cursor: not-allowed;
+}
+ul {
+	list-style-type: none;
+	padding: 0;
+}
+
+.img {
+	width: 100%;
+	display: block;
+	object-fit: cover;
+}
+/* buttons */
+
+.btn {
+	cursor: pointer;
+	color: var(--white);
+	background: var(--primary-500);
+	border: transparent;
+	border-radius: var(--borderRadius);
+	letter-spacing: var(--letterSpacing);
+	padding: 0.375rem 0.75rem;
+	box-shadow: var(--shadow-2);
+	transition: var(--transition);
+	text-transform: capitalize;
+	display: inline-block;
+}
+.btn:hover {
+	background: var(--primary-700);
+	box-shadow: var(--shadow-3);
+}
+.btn-hipster {
+	color: var(--primary-500);
+	background: var(--primary-200);
+}
+.btn-hipster:hover {
+	color: var(--primary-200);
+	background: var(--primary-700);
+}
+.btn-block {
+	width: 100%;
+}
+.btn-hero {
+	font-size: 1.25rem;
+	padding: 0.5rem 1.25rem;
+}
+.btn-danger {
+	background: var(--red-light);
+	color: var(--red-dark);
+}
+.btn-danger:hover {
+	background: var(--red-dark);
+	color: var(--white);
+}
+/* alerts */
+.alert {
+	padding: 0.375rem 0.75rem;
+	margin-bottom: 1rem;
+	border-color: transparent;
+	border-radius: var(--borderRadius);
+	text-align: center;
+	letter-spacing: var(--letterSpacing);
+	text-transform: capitalize;
+}
+
+.alert-danger {
+	color: var(--red-dark);
+	background: var(--red-light);
+}
+.alert-success {
+	color: var(--green-dark);
+	background: var(--green-light);
+}
+/* form */
+
+.form {
+	width: 90vw;
+	max-width: var(--fixed-width);
+	background: var(--white);
+	border-radius: var(--borderRadius);
+	box-shadow: var(--shadow-2);
+	padding: 2rem 2.5rem;
+	margin: 3rem auto;
+	transition: var(--transition);
+}
+.form:hover {
+	box-shadow: var(--shadow-4);
+}
+.form-label {
+	display: block;
+	font-size: var(--smallText);
+	margin-bottom: 0.5rem;
+	text-transform: capitalize;
+	letter-spacing: var(--letterSpacing);
+}
+.form-input,
+.form-textarea,
+.form-select {
+	width: 100%;
+	padding: 0.375rem 0.75rem;
+	border-radius: var(--borderRadius);
+	background: var(--backgroundColor);
+	border: 1px solid var(--grey-200);
+}
+.form-input,
+.form-select,
+.btn-block {
+	height: 35px;
+}
+.form-row {
+	margin-bottom: 1rem;
+}
+
+.form-textarea {
+	height: 7rem;
+}
+::placeholder {
+	font-family: inherit;
+	color: var(--grey-400);
+}
+.form-alert {
+	color: var(--red-dark);
+	letter-spacing: var(--letterSpacing);
+	text-transform: capitalize;
+}
+/* alert */
+
 @keyframes spinner {
 	to {
 		transform: rotate(360deg);
 	}
 }
 
-main {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: 100vh;
+.loading {
+	width: 6rem;
+	height: 6rem;
+	border: 5px solid var(--grey-400);
+	border-radius: 50%;
+	border-top-color: var(--primary-500);
+	animation: spinner 2s linear infinite;
+}
+.loading-center {
+	margin: 0 auto;
+}
+/* title */
+
+.title {
+	text-align: center;
+}
+
+.title-underline {
+	background: var(--primary-500);
+	width: 7rem;
+	height: 0.25rem;
+	margin: 0 auto;
+	margin-top: -1rem;
+}
+
+.container {
+	width: var(--fluid-width);
+	max-width: var(--max-width);
+	margin: 0 auto;
+}
+.full-page {
+	min-height: 100vh;
+}
+
+.coffee-info {
+	text-align: center;
+	text-transform: capitalize;
+	margin-bottom: 1rem;
+	letter-spacing: var(--letterSpacing);
+}
+.coffee-info span {
+	display: block;
+}
+.coffee-info a {
+	color: var(--primary-500);
+}
+
+@media screen and (min-width: 992px) {
+	.coffee-info {
+		text-align: left;
+	}
+	.coffee-info span {
+		display: inline-block;
+		margin-right: 0.5rem;
+	}
+}
+
+.Toastify__toast {
+	text-transform: capitalize;
 }
